dbeaver/dbeaver-ee#1906 Driver files: switch to NIO